Revert "avoid flickering in desktop browser when changing generator values by always showing scroll bar" - scrollbar is ugly in fullscreen mode
This reverts commit ccdd9c74e648f2b4e8c21ed5384509f78c3ba87a.

--- a/static/global.css
+++ b/static/global.css
@@ -1,4 +1,3 @@
-html { overflow-y:scroll }
 body {
 	color:#212529;
 	line-height: 1.5;
